@@ -15,6 +15,7 @@
     ADDED: lock tabs, close inactive tabs, close duplicated tabs
     ADDED: better trash integration
 
+  CHANGED: dim icons in unfocused panel (if dim colors is activated)
   CHANGED: mountman gui: retrieve icons from Solid
   CHANGED: mountman gui: change mount check interval from 3000 to 500 ms
   CHANGED: mountman gui: current selection persists refresh of mountlist,
